--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "lib": ["es2017"],
     "allowSyntheticDefaultImports": false,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "noImplicitAny": false
   },
   "include": ["./src/**/*"]
 }
